:sparkles: feat: 优化

--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "gsap": "^3.14.2",
     "hover-tilt": "^1.0.0",
     "html2particle": "^0.0.11-beta.5",
+    "jsqr": "^1.4.0",
     "lodash-es": "^4.17.23",
     "log-assistant": "^1.1.5",
     "log-symbols": "^7.0.1",
@@ -240,6 +241,7 @@
     "vitepress-plugin-sponsor": "^0.2.0",
     "vitepress-plugin-tabs": "^0.7.3",
     "vitepress-protect-plugin": "^1.0.6",
+    "vue-qrcode-scanner": "^1.0.2",
     "vue3-next-qrcode": "^4.0.0",
     "vue3-signature": "^0.4.4",
     "vue3-simple-icons": "^15.6.0",
