--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "lodash-es": "^4.17.23",
     "log-assistant": "^1.1.5",
     "log-symbols": "^7.0.1",
+    "lottie-web": "^5.13.0",
     "lunisolar": "^2.6.0",
     "mark.js": "^8.11.1",
     "markdown-exit": "^1.0.0-beta.7",
