--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -71,7 +71,7 @@ jobs:
 
       # 安装依赖
       - name: Install dependencies
-        run: npm install # 使用npm ci代替npm install，确保一致性
+        run: npm install --legacy-peer-deps # 使用npm ci代替npm install，确保一致性
         env:
           CI: true
 
@@ -188,4 +188,5 @@ jobs:
       #     channel: '#deployments'
       #   env:
       #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 
