:bug: fix: Update package.json

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "mkcert": "^3.2.0",
     "naive-ui": "^2.43.2",
     "node-scp2": "^1.0.0",
+    "oxc-minify": "^0.112.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
     "rimraf": "^6.1.2",
@@ -268,3 +269,4 @@
   },
   "version": "0.12.1"
 }
+
