--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -2,7 +2,7 @@ name: Deploy VitePress Documentation
 
 on:
   push:
-    branches: [master]
+    branches: [master2]
   workflow_dispatch:
 
 env:
@@ -99,6 +99,7 @@ jobs:
           echo "✅ Deployment completed!"
           echo "🌐 Your site is live at: ${{ steps.deployment.outputs.page_url }}"
           echo "📅 Deployment time: $(date)"
+
 
 
 
