--- a/.github/workflows/full-deploy.yml
+++ b/.github/workflows/full-deploy.yml
@@ -5,18 +5,21 @@ name: Deploy VitePress & Notify
 on:
   push:
     branches: ['master', 'main']
+  pull_request:
+    branches: ['master', 'main']
   workflow_dispatch:
 
 # 全局环境变量与权限
 env:
   TZ: Asia/Shanghai
-  NODE_ENV: production
-  VITE_SSR: false
-  __VUE_PROD_DEVTOOLS__: false
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
+  # 允许读取仓库内容的权限。
   contents: read
+  # 允许写入 GitHub Pages 的权限。
   pages: write
+  # 允许写入 id-token 的权限。
   id-token: write
 
 # 并发控制：只允许一个部署进行
@@ -25,12 +28,16 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # 作业一：构建与部署
-  deploy:
+  # 构建作业
+  build:
+    name: Build Documentation
     runs-on: ubuntu-latest
+
+    # 策略配置
     strategy:
       matrix:
         node-version: [25] # 按您的要求使用 Node 25
+      fail-fast: false
 
     # 环境与权限
     permissions:
@@ -46,41 +53,101 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
-          lfs: false
 
       # 2. 设置 Node.js
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v6
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          architecture: 'x64'
-          check-latest: true
-          registry-url: 'https://registry.npmjs.org/'
+          # node-version: ${{ matrix.node-version }}
+          node-version-file: '.node-version' # 支持.nvmrc、.node-version、package.json等
+          architecture: 'x64' # 系统架构
+          check-latest: true # 是否检查最新版本
+          cache: 'npm' # 包管理器缓存
+          registry-url: https://registry.npmjs.org/ # 如果不配置将影响publish
 
       # 3. 安装依赖（关键修复步骤）
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      # 4. 构建文档（解决内存溢出）
+      # 4. 验证依赖安装
+      - name: Verify installation
+        run: |
+          npm list --depth=0
+          echo "Node version: $(node --version)"
+          echo "NPM version: $(npm --version)"
+
+      # 5. 构建文档（解决内存溢出）
       - name: Build docs
         run: |
+          echo "Building from: ${{ github.workspace }}"
           echo "工作空间: ${{ github.workspace }}"
           # 关键：增加 Node.js 内存限制以防止堆内存溢出
           NODE_OPTIONS="--max-old-space-size=4096" npm run docs:build
         env:
+          # 可以添加更多构建优化参数
+          NODE_OPTIONS: '--max-old-space-size=4096'
           NODE_ENV: production
           VITE_SSR: false
-          
+          __VUE_PROD_DEVTOOLS__: false
 
-      # 5. 设置和部署到 GitHub Pages
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      # 6. 验证构建输出
+      - name: Verify build output
+        run: |
+          if [ -d ".vitepress/dist" ]; then
+            echo "Build directory exists"
+            ls -la .vitepress/dist/ | head -20
+          else
+            echo "Build directory not found!"
+            exit 1
+          fi
 
+      # 7. 上传构建产物
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
+          name: documentation
           path: .vitepress/dist
+          retention-days: 5 # 保留5天
+
+  # 部署作业
+  deploy:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: build # 依赖build作业
+    if: github.event_name == 'push' # 仅在push事件时部署
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    permissions:
+      pages: write
+      id-token: write
+      contents: write # 如果需要commit到gh-pages分支
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: documentation
+          path: ./dist
+
+      # 设置和部署到 GitHub Pages
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      # 添加部署时间戳文件（可选）
+      - name: Create deployment info
+        run: |
+          echo "Deployment time: $(date)" > ./dist/deployment-info.txt
+          echo "Commit: ${{ github.sha }}" >> ./dist/deployment-info.txt
+          echo "Branch: ${{ github.ref_name }}" >> ./dist/deployment-info.txt
+          echo "Workflow: ${{ github.workflow }}" >> ./dist/deployment-info.txt
+
+      - name: Upload to Pages
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: ./dist
 
       - name: Deploy to GitHub Pages
         id: deployment
@@ -117,7 +184,7 @@ jobs:
           COMMIT_MSG="${{ github.event.head_commit.message }}"
           # 处理可能的多行提交信息
           SINGLE_LINE_MSG=$(echo "$COMMIT_MSG" | head -n1 | sed 's/"/\\"/g')
-          
+
           # 确定状态和表情
           case $DEPLOY_RESULT in
             success)
@@ -141,7 +208,7 @@ jobs:
               STATUS_TEXT="未知"
               ;;
           esac
-          
+
           # 写入输出变量
           echo "emoji=$EMOJI" >> $GITHUB_OUTPUT
           echo "status_color=$STATUS_COLOR" >> $GITHUB_OUTPUT
@@ -164,7 +231,7 @@ jobs:
           echo "- **触发者**: ${{ github.triggering_actor || github.actor }}" >> $GITHUB_STEP_SUMMARY
           echo "- **工作流**: [${{ github.workflow }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          
+
           if [[ "${{ steps.prepare-notification.outputs.deploy_result }}" == "success" ]]; then
             echo "### 🌐 访问地址" >> $GITHUB_STEP_SUMMARY
             echo "网站已发布至：[**${{ needs.deploy.outputs.PAGE_URL }}**](${{ needs.deploy.outputs.PAGE_URL }})" >> $GITHUB_STEP_SUMMARY
@@ -233,7 +300,7 @@ jobs:
         run: |
           COLOR_NUM=$(echo "${{ steps.prepare-notification.outputs.status_color }}" | sed 's/#//g')
           COLOR_DEC=$((16#$COLOR_NUM))
-          
+
           curl -H "Content-Type: application/json" -X POST -d '{
             "embeds": [{
               "title": "🚀 VitePress 部署 ${{ steps.prepare-notification.outputs.status_text }}",
