--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "docs:dev": "vitepress --mode development --host",
     "docs:prepare": "esno scripts/prepare.ts",
     "docs:build": "vitepress build",
+    "build:debug": "node --inspect --max_old_space_size=4096 ./node_modules/vitepress/bin/vitepress.js build .",
     "docs:test": "vitest --ui",
     "docker:build": "docker build -t changweihua-github:latest . -f Dockerfile",
     "docs:preview": "vitepress preview --host",
@@ -74,9 +75,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^7.2.0",
-    "@commitlint/cli": "^20.4.0",
-    "@commitlint/config-conventional": "^20.4.0",
-    "@commitlint/cz-commitlint": "^20.4.0",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@commitlint/cz-commitlint": "^20.4.1",
     "@iconify/json": "^2.2.434",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
@@ -87,11 +88,11 @@
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^25.2.0",
     "@types/three": "^0.182.0",
-    "@vitejs/plugin-vue-jsx": "^5.1.3",
+    "@vitejs/plugin-vue-jsx": "^5.1.4",
     "archiver": "^7.0.1",
     "chalk": "^5.6.2",
     "commitizen": "^4.3.1",
-    "commitlint": "^20.4.0",
+    "commitlint": "^20.4.1",
     "commitlint-config-cz": "^0.13.3",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "cz-customizable": "^7.5.1",
@@ -257,6 +258,7 @@
     "highlight.js": "^11.11.1",
     "markdown-it-mathjax3": "^5.2.0",
     "mermaid": "^11.12.2",
+    "oxc-minify": "^0.112.0",
     "prismjs": "^1.30.0",
     "release-it": "^19.2.4",
     "svg-pan-zoom": "^3.6.2",
@@ -268,6 +270,3 @@
   },
   "version": "0.12.1"
 }
-
-
-
