:bug: fix: 修复打包

--- a/.github/workflows/full-deploy.yml
+++ b/.github/workflows/full-deploy.yml
@@ -105,7 +105,7 @@ jobs:
 
       # 7. 上传构建产物
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: documentation
           path: .vitepress/dist
