--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@iconify/json": "^2.2.435",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
+    "@mdit/plugin-tasklist": "^0.22.3",
     "@release-it/conventional-changelog": "^10.0.4",
     "@svgfmt/cli": "^0.2.0",
     "@types/fs-extra": "^11.0.4",
@@ -100,7 +101,7 @@
     "eslint": "^9.39.2",
     "feed": "^5.2.0",
     "font-spider": "^1.3.5",
-    "glob": "^13.0.0",
+    "glob": "^13.0.1",
     "husky": "^9.1.7",
     "jszip": "^3.10.1",
     "markdown-it": "^14.1.0",
@@ -138,7 +139,7 @@
     "vitepress-i18n": "^1.3.5",
     "vitepress-linkcard": "^2.2.1",
     "vitepress-markdown-it-stepper": "^0.1.1",
-    "vitepress-plugin-llms": "^1.10.0",
+    "vitepress-plugin-llms": "^1.11.0",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-nprogress": "^0.1.1",
@@ -154,7 +155,6 @@
     "@iconify/vue": "^5.0.0",
     "@mdit/plugin-figure": "^0.22.3",
     "@mdit/plugin-img-lazyload": "^0.22.2",
-    "@mdit/plugin-tasklist": "^0.22.3",
     "@mermaid-js/layout-elk": "^0.2.0",
     "@mermaid-js/mermaid-zenuml": "^0.2.2",
     "@miletorix/vitepress-back-to-top-button": "^1.0.3",
@@ -221,7 +221,7 @@
     "screenfull": "^6.0.2",
     "simple-git": "^3.30.0",
     "three": "^0.182.0",
-    "ua-parser-js": "^2.0.8",
+    "ua-parser-js": "^2.0.9",
     "universal-waterfall-layout": "^1.1.0",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.16",
@@ -244,6 +244,7 @@
     "vitepress-plugin-sponsor": "^0.2.0",
     "vitepress-plugin-tabs": "^0.7.3",
     "vitepress-protect-plugin": "^1.0.6",
+    "vue-hero-cross": "^1.0.1",
     "vue-qrcode-scanner": "^1.0.2",
     "vue3-next-qrcode": "^4.0.0",
     "vue3-signature": "^0.4.4",
